syntax = "proto3";

package alertmanager;

import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";
import "validate/validate.proto";

//option go_package = "proto/alertmanager;alertmanager";

option (grpc.gateway.protoc_gen_swagger.options.openapiv2_swagger) = {
  info: {
    title: "bcs-alert-manager service API Doc"
    version : "0.0.1"
  };

  schemes: HTTP
  consumes: "application/json"
  produces: "application/json"
};

service AlertManager {
  rpc CreateRawAlertInfo(CreateRawAlertInfoReq) returns (CreateRawAlertInfoResp) {
    option (google.api.http) = {
      post: "/alertmanager/v1/rawalerts"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
      description: "创建原生报警信息"
      summary: "创建组件或资源的原生报警信息(业务可配置场景)"
    };
  }

  rpc CreateBusinessAlertInfo(CreateBusinessAlertInfoReq) returns (CreateBusinessAlertInfoResp) {
    option (google.api.http) = {
      post: "/alertmanager/v1/businessalerts"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
      description: "创建业务定制化报警信息"
      summary: "创建组件或资源的定制报警信息"
    };
  }
}

message CreateRawAlertInfoReq {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema: {
      title: "CreateRawAlertInfoReq"
      description: "创建组件或服务的报警事件(原生)"
      required: ["annotations", "labels"]
    }
    example: {
      value: '{ "annotations": {"message": "event body"}, "labels": {"module_name": "bcs-alert-manager", "alarm_name": "oom" }}'
    }
  };

  int64 starttime       = 1 [
    (grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "starttime",
      description: "告警开始时间(时间戳)"
    },
    (validate.rules).int64.gt = 0
  ];
  int64 endtime         = 2 [
    (grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "endtime",
      description: "告警结束时间(时间戳)"
    }
  ];
  string generatorurl   = 3 [
    (grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "generatorurl",
      description: "原系统URL,可为空"
    },
    (validate.rules).string.max_len = 1024
  ];
  map<string, string> annotations = 4 [
    (grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "annotations",
      description: "注解,通常是message等非判断"
    },
    (validate.rules).map.min_pairs = 1
  ];
  map<string, string> labels  = 5 [
    (grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "labels",
      description: "key/value键值对,判断是否是同一告警"
    },
    (validate.rules).map.min_pairs = 1
  ];
}

message CreateRawAlertInfoResp {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema: {
      title: "CreateRawAlertInfoResp"
      description: "创建组件或服务的报警事件返回"
      required: ["errCode", "errMsg"]
    }
  };

  uint64 errCode = 1 [
    (grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "errCode",
      description: "请求返回状态码"
    }
  ];
  string errMsg = 2 [
    (grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "errMsg",
      description: "请求错误信息"
    }
  ];
}

message CreateBusinessAlertInfoReq {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema: {
      title: "CreateBusinessAlertInfoReq"
      description: "创建组件或服务的报警事件(定制化)"
      required: ["starttime", "alarmType", "AlertAnnotation", "clusterID"]
    }
  };

  int64 starttime       = 1 [
    (grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "starttime",
      description: "告警开始时间(时间戳)"
    },
    (validate.rules).int64.gt = 0
  ];
  int64 endtime         = 2 [
    (grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "endtime",
      description: "告警结束时间(时间戳)"
    }
  ];
  string generatorurl   = 3 [
    (grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "generatorurl",
      description: "原系统URL,可为空"
    },
    (validate.rules).string.max_len = 1024
  ];

  string alarmType = 4 [
    (grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "alarmType",
      description: "报警类型(resource/module)"
    },
    (validate.rules).string = {in: ["resource", "module"]}
  ];

  string clusterID = 5 [
    (grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "clusterID",
      description: "集群ID"
    },
    (validate.rules).string.min_len = 1
  ];

  // 报警annotation
  AlertAnnotation alertAnnotation = 6 [
    (grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "alertAnnotation",
      description: "报警内容"
    },
    (validate.rules).message.required = true
  ];

  // 模块类型报警label
  ModuleAlertLabel moduleAlertLabel = 7 [
    (grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "moduleAlertLabel",
      description: "模块报警标识"
    }
  ];

  // 资源类型报警label
  ResourceAlertLabel resourceAlertLabel = 8 [
    (grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "resourceAlertLabel",
      description: "资源报警标识"
    }
  ];
}

message CreateBusinessAlertInfoResp {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema: {
      title: "CreateBusinessAlertInfoResp"
      description: "创建组件或服务的定制报警事件返回"
      required: ["errCode", "errMsg"]
    }
  };

  uint64 errCode = 1 [
    (grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "errCode",
      description: "请求返回状态码"
    }
  ];
  string errMsg = 2 [
    (grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "errMsg",
      description: "请求错误信息"
    }
  ];
}

message AlertAnnotation {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema: {
      title: "ModuleAlertLabel"
      description: "报警annotation信息(报警内容/报警注释)"
      required: ["message"]
    }
  };

  string message = 1 [
    (grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "message",
      description: "告警内容"
    },
    (validate.rules).string.min_len = 1
  ];

  string comment = 2 [
    (grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "comment",
      description: "告警注释"
    }
  ];
}

message CommonAlertLabel {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema: {
      title: "CommonAlertLabel"
      description: "报警的公共label信息"
      required: ["alarmType", "clusterID"]
    }
  };
  string alarmType = 1 [
    (grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "alarmType",
      description: "报警类型(cpu/mem/io)"
    }
  ];
  string clusterID = 2 [
    (grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "clusterID",
      description: "集群ID(组件报警集群ID统一: 9999)"
    },
    (validate.rules).string.min_len = 1
  ];
}

message ModuleAlertLabel {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema: {
      title: "ModuleAlertLabel"
      description: "模块报警的标识label信息"
      required: ["moduleName", "moduleIP", "alarmName"]
    }
  };

  string moduleName = 1 [
    (grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "moduleName",
      description: "模块名称"
    },
    (validate.rules).string.min_len = 1
  ];
  string moduleIP = 2 [
    (grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "moduleIP",
      description: "模块IP"
    }
  ];
  string alarmName = 3 [
    (grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "alarmName",
      description: "报警metric名称"
    },
    (validate.rules).string.min_len = 1
  ];
  string alarmLevel = 4 [
    (grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "alarmLevel",
      description: "报警等级(info/error/warn)"
    }
  ];
}

message ResourceAlertLabel {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema: {
      title: "ResourceAlertLabel"
      description: "资源报警的标识label信息"
    }
  };

  string alarmName = 1 [
    (grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "alarmName",
      description: "报警名称"
    }
  ];

  string nameSpace = 2 [
    (grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "nameSpace",
      description: "资源命名空间"
    }
  ];
  string alarmResourceType = 3 [
    (grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "alarmResourceType",
      description: "报警资源类型"
    },
    (validate.rules).string.min_len = 1
  ];
  string alarmResourceName = 4 [
    (grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "alarmResourceName",
      description: "报警资源名称"
    }
  ];
  string alarmID = 5 [
    (grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "alarmID",
      description: "event资源报警ownerID"
    }
  ];

  string alarmLevel = 6 [
    (grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "alarmLevel",
      description: "报警等级(info/error/warn)"
    }
  ];
}